[project]
name = "chromadb-llm-rag-support-engine"
version = "0.1.0"
description = "Institutional-grade local RAG customer support engine powered by ChromaDB and Ollama."
dependencies = [
    "ollama>=0.6.0",
    "chromadb>=0.4.0",
    "sentence-transformers>=2.2.2",
    "python-dotenv>=1.0.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["chat", "ingest"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.isort]
profile = "black"
known_first_party = ["chat", "ingest"]
line_length = 100

[tool.pytest.ini_options]
pythonpath = ["."]